--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,114 +1,79 @@
-FROM alpine:3.5
-MAINTAINER dishuostecli "dishuostecli@zhen22.com"
+FROM nginx:1.21.4-alpine
 
-ARG ALPINE_REPO=http://dl-cdn.alpinelinux.org
+MAINTAINER stanzhou "m@sq.mk"
+
+ARG ALPINE_REPO=https://mirrors.aliyun.com
 ARG URL_PREFIX=
 
-ENV NGINX_VERSION 1.10.2
+ENV NGINX_VERSION 1.21.4
+ENV MORE_HEADER_MODULE_VERSION 0.33
 ENV TIMEZONE Asia/Shanghai
+ENV LUAJIT_LIB=/usr/lib
 
 RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
-	&& repos=/etc/apk/repositories \
-        && mv -f ${repos} ${repos}_bk \
-	&& echo "${URL_PREFIX}${ALPINE_REPO}/alpine/v${ver}/main" > ${repos} \
-	&& echo "${URL_PREFIX}${ALPINE_REPO}/alpine/v${ver}/community" >> ${repos} \
-        \
-	&& apk add --no-cache tzdata \
-	&& ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
-	&& echo "${TIMEZONE}" > /etc/timezone \
-        \
-        && GPG_KEYS=B0F4253373F8F6F510D42178520A9993A1C052F8 \
-	&& CONFIG="\
-		--prefix=/etc/nginx \
-		--sbin-path=/usr/sbin/nginx \
-		--modules-path=/usr/lib/nginx/modules \
-		--conf-path=/etc/nginx/nginx.conf \
-		--error-log-path=/var/log/nginx/error.log \
-		--http-log-path=/var/log/nginx/access.log \
-		--pid-path=/var/run/nginx.pid \
-		--lock-path=/var/run/nginx.lock \
-		--http-client-body-temp-path=/var/cache/nginx/client_temp \
-		--http-proxy-temp-path=/var/cache/nginx/proxy_temp \
-		--http-fastcgi-temp-path=/var/cache/nginx/fastcgi_temp \
-		--http-uwsgi-temp-path=/var/cache/nginx/uwsgi_temp \
-		--http-scgi-temp-path=/var/cache/nginx/scgi_temp \
-		--user=nginx \
-		--group=nginx \
-                --with-http_ssl_module \
-                --with-http_realip_module \
-                --with-http_gzip_static_module \
-                --with-http_stub_status_module \
-		--with-threads \
-		--with-http_slice_module \
-                --with-file-aio \
-                --with-http_v2_module \
-                --with-ipv6 \
-	" \
-	&& addgroup -S nginx \
-	&& adduser -D -S -h /var/cache/nginx -s /sbin/nologin -G nginx nginx \
-	&& apk add --no-cache --virtual .build-deps \
-		gcc \
-		libc-dev \
-		make \
-		openssl-dev \
-		pcre-dev \
-		zlib-dev \
-		linux-headers \
-		curl \
-		gnupg \
-		libxslt-dev \
-		gd-dev \
-		geoip-dev \
-		perl-dev \
-	&& curl -fSL ${URL_PREFIX}https://nginx.org/download/nginx-$NGINX_VERSION.tar.gz -o nginx.tar.gz \
-	&& curl -fSL ${URL_PREFIX}https://nginx.org/download/nginx-$NGINX_VERSION.tar.gz.asc  -o nginx.tar.gz.asc \
-	&& export GNUPGHOME="$(mktemp -d)" \
-	&& gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "$GPG_KEYS" \
-	&& gpg --batch --verify nginx.tar.gz.asc nginx.tar.gz \
-	&& rm -r "$GNUPGHOME" nginx.tar.gz.asc \
-	&& mkdir -p /usr/src \
-	&& tar -zxC /usr/src -f nginx.tar.gz \
-	&& rm nginx.tar.gz \
-	&& cd /usr/src/nginx-$NGINX_VERSION \
-	&& ./configure $CONFIG \
-	&& make -j$(getconf _NPROCESSORS_ONLN) \
-	&& make install \
-	&& rm -rf /etc/nginx/html/ \
-	&& mkdir /etc/nginx/conf.d/ \
-	&& mkdir -p /var/www/ \
-	&& echo "Server is ready." > /var/www/index.html \
-	&& echo "Server is currently unavailable." > /var/www/50x.html \
-	&& ln -s ../../usr/lib/nginx/modules /etc/nginx/modules \
-	&& strip /usr/sbin/nginx* \
-	&& rm -rf /usr/src/nginx-$NGINX_VERSION \
-	\
-	# Bring in gettext so we can get `envsubst`, then throw
-	# the rest away. To do this, we need to install `gettext`
-	# then move `envsubst` out of the way so `gettext` can
-	# be deleted completely, then move `envsubst` back.
-	&& apk add --no-cache --virtual .gettext gettext \
-	&& mv /usr/bin/envsubst /tmp/ \
-	\
-	&& runDeps="$( \
-		scanelf --needed --nobanner /usr/sbin/nginx /usr/lib/nginx/modules/*.so /tmp/envsubst \
-			| awk '{ gsub(/,/, "\nso:", $2); print "so:" $2 }' \
-			| sort -u \
-			| xargs -r apk info --installed \
-			| sort -u \
-	)" \
-	&& apk add --no-cache --virtual .nginx-rundeps $runDeps \
-	&& apk del .build-deps \
-	&& apk del .gettext \
-        && mv -f /etc/apk/repositories_bk /etc/apk/repositories \
-	&& mv /tmp/envsubst /usr/local/bin/ \
-	\
-	# forward request and error logs to docker log collector
-	&& ln -sf /dev/stdout /var/log/nginx/access.log \
-	&& ln -sf /dev/stderr /var/log/nginx/error.log
+  && repos=/etc/apk/repositories \
+  && mv -f ${repos} ${repos}_bk \
+  && echo "${URL_PREFIX}${ALPINE_REPO}/alpine/v${ver}/main" > ${repos} \
+  && echo "${URL_PREFIX}${ALPINE_REPO}/alpine/v${ver}/community" >> ${repos} \
+  && echo "@edge ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/main" >> ${repos} \
+  && echo "@testing ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/testing" >> ${repos} \
+  && apk add --no-cache tzdata \
+  && ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
+  && echo "${TIMEZONE}" > /etc/timezone \
+       \
+  && set -xe \
+  && NPROC=$(getconf _NPROCESSORS_ONLN) \
+  && apk add --no-cache  --virtual .build-deps \
+    shadow gettext-dev libzip libzip-dev \
+      \
+# 更改配置
+  && usermod -u 82 nginx \
+#  && groupmod -g 82 nginx \
+  && apk add --no-cache --virtual .build-deps \
+      gcc \
+      libc-dev \
+      git \
+      make \
+      automake \
+      autoconf \
+      libtool \
+      linux-headers \
+      openssl-dev \
+      pcre-dev \
+      zlib-dev \
+      curl \
+      gnupg \
+      libxslt-dev \
+      gd-dev \
+      geoip-dev \
+      perl-dev \
+      libedit-dev \
+      bash \
+      alpine-sdk \
+      findutils \
+  && curl -fSL http://nginx.org/download/nginx-$NGINX_VERSION.tar.gz -o nginx.tar.gz \
+  #geoip2
+  && git clone --recursive https://github.com/maxmind/libmaxminddb.git \
+  && git clone --recursive https://github.com/leev/ngx_http_geoip2_module.git \
+  && mkdir -p /usr/src \
+  && tar -zxC /usr/src -f nginx.tar.gz \
+  && rm nginx.tar.gz \
+  #geoip2
+  && cp -r ./libmaxminddb /usr/src \
+  && cp -r ./ngx_http_geoip2_module /usr/src \
+  && rm -rf libmaxminddb \
+  && rm -rf ngx_http_geoip2_module \
+  #more header module
+  && curl -fSL https://github.com/openresty/headers-more-nginx-module/archive/v$MORE_HEADER_MODULE_VERSION.tar.gz -o headers-more-nginx-module.tar.gz \
+  && tar -zxC /usr/src -f headers-more-nginx-module.tar.gz \
+  && rm headers-more-nginx-module.tar.gz \
+   #echo nginx module
+  && curl -fSL https://github.com/openresty/echo-nginx-module/archive/v0.62.tar.gz -o echo-nginx-module.tar.gz \
+  && tar -zxC /usr/src -f echo-nginx-module.tar.gz \
+  && rm echo-nginx-module.tar.gz \
+  \
 
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY nginx.vh.default.conf /etc/nginx/conf.d/default.conf
 
-EXPOSE 80 443
-
-CMD ["nginx", "-g", "daemon off;"]
+  && apk del .build-deps \
+  && rm -rf /var/cache/apk/* \
+  && rm -rf /usr/local/src/* \
