--- a/php/phpfpm8.1/develop/Dockerfile
+++ b/php/phpfpm8.1/develop/Dockerfile
@@ -12,7 +12,7 @@ ENV PHP_PHAR_DIR="${PHP_INI_DIR}/phar"
 ENV PATH="${PATH}:${PHP_PHAR_DIR}"
 ENV TIMEZONE="Asia/Shanghai"
 #扩展安装脚本
-COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
+#COPY --from=mlocati/php-extension-installer /usr/bin/install-php-extensions /usr/bin/
 
 RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
 	&& repos=/etc/apk/repositories \
@@ -22,20 +22,41 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
 	&& echo "@edge ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/main" >> ${repos} \
 	&& echo "@testing ${URL_PREFIX}${ALPINE_REPO}/alpine/edge/testing" >> ${repos} \
         \
-	&& apk add --no-cache tzdata \
-	&& ln -sf /lib/libc.musl-x86_64.so.1 /lib/ld-linux-x86-64.so.2 \
-	&& ln -sf /usr/share/zoneinfo/${TIMEZONE} /etc/localtime \
-	&& echo "${TIMEZONE}" > /etc/timezone \
-        \
-        && set -xe \
+  && set -xe \
 	&& NPROC=$(getconf _NPROCESSORS_ONLN) \
 ## proxy_dns
 #	&& cat /etc/resolv.conf > /etc/resolv.conf.bak \
 #	&& echo 'nameserver ${PROXY_DNS}' >> /etc/resolv.conf \
 # phar
+  && mkdir ${PHP_PHAR_DIR} \
+  && EXPECTED_SIGNATURE=$(curl -fsSL ${URL_PREFIX}https://composer.github.io/installer.sig) \
+  && php -r "copy('${URL_PREFIX}https://getcomposer.org/installer', 'composer-setup.php');" \
+  && ACTUAL_SIGNATURE=$(php -r "echo hash_file('SHA384', 'composer-setup.php');") \
+  && if [ "${EXPECTED_SIGNATURE}" != "${ACTUAL_SIGNATURE}" ]; then \
+          >&2 echo 'ERROR: Invalid installer signature'; \
+          exit 1; \
+  fi \
+  && php composer-setup.php --install-dir=${PHP_PHAR_DIR} --filename=composer \
+  && rm composer-setup.php \
+  && chmod +x ${PHP_PHAR_DIR}/composer \
+    \
+  && apk add --no-cache --virtual .build-deps \
+          linux-headers \
+          zlib-dev \
+          gettext-dev libzip-dev \
+  \
 # 安装扩展
-  && install-php-extensions mongodb xdebug\
-  && rm -f /usr/bin/install-php-extensions \
+# xdebug
+  && curl -fsSL "${URL_PREFIX}https://pecl.php.net/get/xdebug" -o xdebug.tgz \
+  && mkdir -p /tmp/xdebug \
+  && tar -xf xdebug.tgz -C /tmp/xdebug --strip-components=1 \
+  && rm xdebug.tgz \
+  && docker-php-ext-configure /tmp/xdebug --enable-xdebug \
+  && docker-php-ext-install -j${NPROC} /tmp/xdebug \
+  && rm -rf /tmp/xdebug \
+	\
+#  && install-php-extensions mongodb xdebug \
+#  && rm -f /usr/bin/install-php-extensions \
 # xdebug 配置
 	&& echo "" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
 	&& echo "xdebug.mode=debug,develop,trace" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
@@ -46,18 +67,23 @@ RUN ver=$(cat /etc/alpine-release | awk -F '.' '{printf "%s.%s", $1, $2;}') \
 	&& echo "xdebug.client_port = 9000" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
 	&& echo "xdebug.idekey = \"PHPSTORM\"" >> /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini \
 #  && rm -r /tmp/xdebug \
+# mongodb
+  && curl -fsSL "${URL_PREFIX}https://pecl.php.net/get/mongodb" -o mongodb.tgz \
+  && mkdir -p /tmp/mongodb \
+  && tar -xf mongodb.tgz -C /tmp/mongodb --strip-components=1 \
+  && rm mongodb.tgz \
+  && docker-php-ext-configure /tmp/mongodb --enable-mongodb \
+  && docker-php-ext-install -j${NPROC} /tmp/mongodb \
+  && rm -rf /tmp/mongodb \
+	\
 # swoole
-  && apk add --no-cache --virtual .build-deps \
-          linux-headers \
-          zlib-dev \
-  \
   && curl -fsSL "${URL_PREFIX}https://pecl.php.net/get/swoole" -o swoole.tgz \
   && mkdir -p /tmp/swoole \
   && tar -xf swoole.tgz -C /tmp/swoole --strip-components=1 \
   && rm swoole.tgz \
   && docker-php-ext-configure /tmp/swoole --enable-swoole \
   && docker-php-ext-install -j${NPROC} /tmp/swoole \
-  && rm -r /tmp/swoole \
+  && rm -rf /tmp/swoole \
 	\
 # end
 	&& apk del -f .build-deps \
